--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   table_calendar: ^3.0.9
+  google_fonts: ^5.1.0
   intl: ^0.18.1
 
 dev_dependencies:
