--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   table_calendar: ^3.0.9
   google_fonts: ^5.1.0
   intl: ^0.18.1
+  dio: ^5.2.1+1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
