--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.18.1
   dio: ^5.2.1+1
   provider: ^6.0.5
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
